--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  video_player: 2.2.18
+  video_thumbnail: ^0.4.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -65,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/video/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -77,14 +79,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: CormorantGaramond
-      fonts:
-        - asset: assets/font/CormorantGaramond-Regular.ttf
 
-    - family: LondrinaSolid
+  fonts:
+    - family: BalooBhaijaan
       fonts:
-        - asset: assets/font/LondrinaSolid-Regular.ttf
+        - asset: assets/font/BalooBhaijaan2-Regular.ttf
+        - asset: assets/font/BalooBhaijaan2-Bold.ttf
+          weight: 700
+        - asset: assets/font/BalooBhaijaan2-ExtraBold.ttf
+          weight: 800
+        - asset: assets/font/BalooBhaijaan2-Medium.ttf
+          weight: 500
+        - asset: assets/font/BalooBhaijaan2-SemiBold.ttf
+          weight: 600
+
+
 
 
   # For details regarding fonts from package dependencies,
