--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   persistent_bottom_nav_bar: 4.0.2
   http: 0.13.4
   clay_containers: ^0.3.2
+  image_picker: ^0.8.4+6
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
