--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   clay_containers: ^0.3.2
   image_picker: ^0.8.4+6
   carousel_slider: ^4.0.0
-
+  auto_size_text: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
