--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
     - assets/
     - assets/video/
     - assets/image/
+    - assets/image/productImg/
+    - assets/image/mainBanner/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
