--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   carousel_slider: ^4.0.0
   numberpicker: ^2.1.1
   auto_size_text: ^3.0.0
+  syncfusion_flutter_charts: ^19.4.52
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +76,7 @@ flutter:
     - assets/image/
     - assets/image/productImg/
     - assets/image/mainBanner/
+    - assets/image/brandImg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
