--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   numberpicker: ^2.1.1
   auto_size_text: ^3.0.0
   syncfusion_flutter_charts: ^19.4.52
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,7 @@ flutter:
     - assets/image/productImg/
     - assets/image/mainBanner/
     - assets/image/brandImg/
+    - assets/image/service/
     - assets/cate/
 
   # An image asset can refer to one or more resolution-specific "variants", see
